# audio-filename-fixer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  install.sh  music_tagger.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
badges/: test-badge.json
src/: config.py  lookup.py  parser.py  state.py  tags.py
tests/: test_config.py  test_lookup.py  test_music_tagger.py  test_parser.py  test_state.py  test_tags.py
